# QI_Trader

./: .claudeignore  .gitignore  README.md  dashboard.py  gateway.sh  main.py  package-lock.json  pyproject.toml  requirements.txt  start.sh
agents/: README.md  ai.py  dashboard.py  decision.py  execution.py  features.py  ib_gateway.py  ingestion.py  risk.py  strategy.py  transactions.py
gateway/: README.md  execution.py  ib_gateway.py  ingestion.py  transactions.py
infra/: README.md
models/: README.md
research/: README.md
shared/: README.md
tests/: README.md  conftest.py  test_dashboard.py  test_decision.py  test_execution.py  test_ingestion.py  test_main.py  test_strategy.py  test_transactions.py
